fix: responsiveness on mobile phone

--- a/input.css
+++ b/input.css
@@ -58,7 +58,7 @@
     }
 
     .header {
-        padding: 40px 0;
+        padding: 40px 20px;
         background-color: #000;
         display: flex;
         flex-direction: column;
@@ -132,7 +132,7 @@
 
     .venue-reach-map {
         border: 0;
-        min-width: 500px;
+        min-width: 100px;
     }
 
     .sponsors {
@@ -151,19 +151,16 @@
     }
 
     .sponsors-platine-logo {
-        width: 400px;
         height: 200px;
         padding: 0 20px;
     }
 
     .sponsors-gold-logo {
-        width: 200px;
         height: 100px;
         padding: 0 10px;
     }
 
     .sponsors-silver-logo {
-        width: 100px;
         height: 50px;
         padding: 0 5px;
     }
@@ -195,7 +192,9 @@
 
     .footer-newsletter-form {
         display: flex;
+        flex-direction: row;
         justify-content: flex-end;
+        gap: 10px;
     }
 
     .footer-newsletter-form-button {
@@ -203,7 +202,6 @@
         padding: 2px 5px;
         border-radius: 5px;
         font-size: 14px;
-        margin-left: 10px;
     }
 
     .footer-newsletter-form-button:hover {
@@ -227,6 +225,27 @@
 
     /* Mobile phone */
     @media only screen and (max-width: 600px) {
+        .venue-reach-map {
+            border: 0;
+            width: 100%;
+            height: 300px;
+        }
+
+        .sponsors-platine-logo {
+            height: 100px;
+            padding: 0 20px;
+        }
+
+        .sponsors-gold-logo {
+            height: 75px;
+            padding: 0 10px;
+        }
+
+        .sponsors-silver-logo {
+            height: 40px;
+            padding: 0 5px;
+        }
+
         .footer {
             padding: 20px 20px;
         }
@@ -264,6 +283,13 @@
 
         .venue-reach-map {
             border: 0;
+        }
+
+        .footer-newsletter-form {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 10px;
         }
 
         .footer {
